--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.13.2",
     "swiper": "^11.1.8"
   },
   "devDependencies": {
